Fix aligning close button to left, align header items to top-left and top-right

--- a/styles/common.css
+++ b/styles/common.css
@@ -13,7 +13,8 @@ html {
     float:right;
     text-align: center;
     padding: 8px;
-    margin-right: 5px;
+    margin-right: 4px;
+    font-size: 12px;
 }
 /* signup Button */
 .btn-sign {
@@ -54,6 +55,7 @@ h4 {
 }
 /* Modal Content/Box */
 .modal-content {
+    position: relative;
     background-color: white;
     margin: 10px auto; /* 15% from the top and centered */
     width: 30%; /* Could be more or less, depending on screen size */
@@ -65,6 +67,8 @@ h4 {
     color: black;
     font-size: 30px;
     font-weight: bold;
+    right:0vmax;
+    padding: 8px 20px;
 }
 /* Toggle Form */
 .toggle-form {
@@ -90,4 +94,17 @@ input[type=text], input[type=password] {
     display: inline-block;
     box-sizing: border-box;
     background-color: grey;
+}
+.top-right {
+    position: absolute;
+    top:0;
+    right:0;
+    padding: 12px 20px;
+    margin: 8px 0;
+}
+.top-left {
+    position: absolute;
+    top:0;
+    left:0;
+    padding-left:8px;
 }
